--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-28181852-23"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-28181852-23');
+    </script>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://assets3.dailybruin.com/images/national-elections/favicon-dailybruin-f815c461aca5d1fd9a76cac059f84913-f815c461aca5d1fd9a76cac059f84913-f815c461aca5d1fd9a76cac059f84913.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to the Daily Bruin’s coverage of the 2022 midterm elections. News and Opinion writers have put together pieces to engage and inform you as you navigate this election."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -36,24 +45,24 @@
     <link rel="shortcut apple-touch-icon" href="https://s3-us-west-2.amazonaws.com/assets.dailybruin.com/images/db-logo.png" type="image/png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- {/* HTML Meta Tags */} -->
-    <title>{TODO: insert website title here}</title>
+    <title>2022 Midterm Elections</title>
     <meta
     name="description"
-    content="<TODO: insert description text here>"
+    content="Welcome to the Daily Bruin’s coverage of the 2022 midterm elections. News and Opinion writers have put together pieces to engage and inform you as you navigate this election."
     />
 
     <!-- {/* Google / Search Engine Tags */} -->
     <meta
     itemprop="name"
-    content="<TODO: insert website title here>"
+    content="2022 Midterm Elections"
     />
     <meta
     itemprop="description"
-    content="<TODO: insert description text here>"
+    content="Welcome to the Daily Bruin’s coverage of the 2022 midterm elections. News and Opinion writers have put together pieces to engage and inform you as you navigate this election."
     />
     <meta
     itemprop="image"
-    content="<TODO: insert preview image url here>"
+    content="https://assets3.dailybruin.com/images/national-elections/image-10-4fabe296c2a4a9f4a534d12cc162d433.png"
     />
 
     <!-- {/* Facebook Meta Tags */} -->
@@ -64,30 +73,30 @@
     <meta property="og:type" content="website" />
     <meta
     property="og:title"
-    content="<TODO: insert website title here>"
+    content="2022 Midterm Elections"
     />
     <meta
     property="og:description"
-    content="<TODO: insert description text here>"
+    content="Welcome to the Daily Bruin’s coverage of the 2022 midterm elections. News and Opinion writers have put together pieces to engage and inform you as you navigate this election."
     />
     <meta
     property="og:image"
-    content="<TODO: insert preview image url here>"
+    content="https://assets3.dailybruin.com/images/national-elections/image-10-4fabe296c2a4a9f4a534d12cc162d433.png"
     />
 
     <!-- {/* Twitter Meta Tags */} -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
     name="twitter:title"
-    content="<TODO: insert website title here>"
+    content="2022 Midterm Elections"
     />
     <meta
     name="twitter:description"
-    content="<TODO: insert description text here>"
+    content="Welcome to the Daily Bruin’s coverage of the 2022 midterm elections. News and Opinion writers have put together pieces to engage and inform you as you navigate this election."
     />
     <meta
     name="twitter:image"
-    content="<TODO: insert preview image url here>"
+    content="https://assets3.dailybruin.com/images/national-elections/image-10-4fabe296c2a4a9f4a534d12cc162d433.png"
     />
   </head>
   <body>
